[FEAT] cooking 페이지 레이아웃 구현
- cooking.css 추가
- cooking.pug에 레이아웃 추가

--- a/package.json
+++ b/package.json
@@ -13,5 +13,18 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.12",
     "pug": "2.0.0-beta11"
-  }
+  },
+  "description": "![img](https://img.shields.io/badge/Express--orange) ![project_start_date](https://img.shields.io/badge/Dedate%20Start%20Date-2021--09--23-informational.svg)",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/boostcampwm-2021/bookathon_E.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/boostcampwm-2021/bookathon_E/issues"
+  },
+  "homepage": "https://github.com/boostcampwm-2021/bookathon_E#readme"
 }
