--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.12",
-    "pug": "2.0.0-beta11"
+    "nedb": "^1.8.0",
+    "pug": "^3.0.2"
   },
   "description": "![img](https://img.shields.io/badge/Express--orange) ![project_start_date](https://img.shields.io/badge/Dedate%20Start%20Date-2021--09--23-informational.svg)",
   "main": "app.js",
